creation menu basic layout complete

--- a/prototypes/serverDB_test/public/style.css
+++ b/prototypes/serverDB_test/public/style.css
@@ -19,6 +19,10 @@ canvas {
     font-size: large;
 }
 
+.whitebox {
+    font-size: large;
+}
+
 #creationCanvas {
     position: absolute;
     margin: 0px;
