user funds update, scrollable org list div
still need to format the org div class, but it's working -- sort works, div creation with no dupes, disappears/reappears when menu comes in/out

--- a/prototypes/serverDB_test/public/style.css
+++ b/prototypes/serverDB_test/public/style.css
@@ -23,6 +23,10 @@ canvas {
     font-size: large;
 }
 
+.orgDivs {
+    font-size: large;
+}
+
 #creationCanvas {
     position: absolute;
     margin: 0px;
